# cw-workspace

./: Cargo.toml  NOTICE  README.md  cargo-generate.toml
contracts/: cargo-generate.toml  pre-script.rhai
contracts/cw-minimal-template/: Cargo.toml
contracts/cw-sylvia-template/: Cargo.toml
contracts/cw-sylvia-template/src/: contract.rs  lib.rs  multitest.rs
contracts/cw20/: Cargo-single.toml  Cargo.toml  NOTICE
contracts/cw20-base/: Cargo.toml
contracts/cw20/src/: contract.rs
contracts/cw721/: Cargo-single.toml  Cargo.toml  NOTICE
contracts/cw721-base/: Cargo.toml
contracts/cw721/examples/: schema.rs
contracts/cw721/src/: execute.rs
contracts/minimal/: Cargo-single.toml  Cargo.toml  NOTICE
contracts/minimal/src/: contract.rs
contracts/sylvia/: README.md
contracts/sylvia/.cargo/: config.toml
contracts/sylvia/meta/: test_generate.sh
contracts/sylvia/src/: error.rs  responses.rs
