[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
{% if workspace == "false" %}cosmwasm-schema = "=1.1.9"
cosmwasm-std = "=1.1.9"
cw-utils = "=1.0.1"
cw2 = "=1.1.0"
cw20 = "=1.1.0"
cw-storage-plus = "=1.1.0"
{% else %}cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-utils = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-storage-plus = { workspace = true }
{% endif %}
schemars = "0.8.1"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cw-multi-test = { workspace = true }
