[package]
name          = "{{project-name}}"
authors       = ["{{authors}}"]
version       = "0.1.0"
edition       = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std    = "1.2.1"
cw-ownable      = "0.5.1"
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.1"
cw2             = "1.1.0"
cw721           = { version = "0.18.0" }
cw721-base-016  = { version = "0.16.0", package = "cw721-base", features = ["library"] }
schemars        = "0.8.11"
serde           = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror       = "1.0.38"

[dev-dependencies]
cw-multi-test = "0.19"
