[package]
name          = "{{project-name}}"
authors       = ["{{authors}}"]
version       = "0.1.0"
edition       = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-utils        = "0.16.0"
cw2             = "0.16.0"
cw721           = "0.16.0"
cw-storage-plus = "0.16.0"
schemars        = "0.8.10"
serde           = { version = "1.0.140", default-features = false, features = ["derive"] }
thiserror       = "1.0.31"
